# hanger

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  TECHNICAL_ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
automation/: md_i18n.py  starter.sh
pages/: hanger.css  hanger.html  hangerSteps.html  loadUserForm.html  recovery-password.html
src/: hanger.py  loader.py
src/base/: interviewer.py  user.py
src/hanger_app/: __init__.py  config.py  db.py  models.py  repositories.py  routes.py  security.py  services.py  uploads.py
src/hanger_app/migrations/: 001_initial.sql  002_integrity_and_operations.sql  003_controlled_onboarding.sql  004_installation_settings.sql  005_interview_pipeline.sql
src/hanger_app/templates/: chat_message.html  error.html  index.html  message.html  recovery.html  register.html
tests/: conftest.py  test_architecture.py  test_auth_and_jobs.py  test_hanger.py  test_interviewer.py  test_routes_and_uploads.py  test_user.py
